fix: update z-index for overlapped problem

--- a/src/dropdown.scss
+++ b/src/dropdown.scss
@@ -86,7 +86,6 @@ input.custom.replaced {
 .custom-select {
   display: block;
   position: absolute;
-  z-index: 1;
   top: 0;
   left: 0;
   width: 100%;
